@@ -1,3 +1,7 @@
+2007-10-08  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: dropping unneeded dbus server
+
 2007-08-22  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-settings-keyboard-xkb.c: initializing current_*config early,
